--- a/SnapTrash/app/src/main/res/values/strings.xml
+++ b/SnapTrash/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SnapTrash</string>
+    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
+    <string name="camera_not_found">No camera harware found</string>
+    <string name="image_cd_camera">The Camera</string>
+    <string name="button">Camera</string>
 </resources>
