--- a/clarifai-android-starter/app/src/main/res/values/strings.xml
+++ b/clarifai-android-starter/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="clarifai_id">TODO</string>
-    <string name="clarifai_secret">TODO</string>
+    <string name="clarifai_id">BZ8FbcALIw8rIup0pJVbflD3E8jpxPML344krhh4</string>
+    <string name="clarifai_secret">PqJozs2-fcxMC0Le0Xe6k677OOVozx9CDqWeyQqP</string>
 
-    <string name="app_name">Clarifai v2 API Starter</string>
+    <string name="app_name">SnapTrash</string>
 
     <string name="error_external_storage_permission_not_granted">You must accept this permission so we can upload your images!</string>
 
